--- a/WWW/Properties/launchSettings.json
+++ b/WWW/Properties/launchSettings.json
@@ -16,7 +16,8 @@
         "applicationUrl": "http://localhost:5262",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
-        }
+        },
+        "workingDirectory": "../Backend"
       },
       "https": {
         "commandName": "Project",
