test: add tests for ProjectViewService

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -30,6 +30,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Backend\Backend.csproj" />
+      <ProjectReference Include="..\WWW\WWW.csproj" />
     </ItemGroup>
 
 </Project>
