--- a/WWW/WWW.csproj
+++ b/WWW/WWW.csproj
@@ -16,6 +16,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.8" />
+      <PackageReference Include="MudBlazor" Version="7.11.0" />
     </ItemGroup>
 
 </Project>
